--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site 网站配置
-title: ScarSu
-subtitle: 自律使我自由
+title: ScarSu-自律使我自由
+subtitle: 公号：自律神仙ScarSu
 description: ScarSu's blog
 keywords: ScarSu blog
 author: ScarSu
