--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site 网站配置
 title: ScarSu
-subtitle: 自律使我自由——公号：自律神仙ScarSu
+subtitle: 自律神仙ScarSu
 description: ScarSu's blog
-keywords: ScarSu blog
+keywords: ScarSu blog 自律 自律神仙 SelfRegulation
 author: ScarSu
 language: zh-CN
 timezone: Asia/Shanghai
