--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -42,7 +42,7 @@ busuanzi: true ## 是否使用不蒜子页面访问计数 If you want to use Bus
 ## (busuanzi已经配置好 但是为了节省300ms左右页面响应时间 关闭)
 
 # others 其他
-fancybox: false ## 是否启用Fancybox图片灯箱效果.
+fancybox: true ## 是否启用Fancybox图片灯箱效果.
 show_category_count: true ## 是否显示侧边栏分类数目If you want to show the count of categories in the sidebar widget please set the value to true.
 toc_number: true ## 是否显示文章中目录列表自动编号 If you want to add list number to toc please set the value to true.
 shareto: true ## 是否使用分享按鈕，需要安装hexo-helper-qrcode插件使用 If you want to use the share button please set the value to true, and you must have hexo-helper-qrcode installed.
@@ -78,12 +78,15 @@ menu:
     - page: home
       directory: .
       icon: fa-home
+    - page: fe_nav
+      directory: fe_nav/
+      icon: fa-rss-square
     - page: Demo
       directory: demo/
       icon: fa-code
     - page: archive
       directory: archives/
-      icon: fa-archive
+      icon: fa-list
     - page: self_regulation
       directory: self_regulation/
       icon: fa-check-square-o
