--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://www.scarsu.com/
 root: /
-permalink: :year/:month/:day/:title/ ## 文章的 永久链接 格式
+permalink: :title/ ## 文章的 永久链接 格式
 permalink_defaults: ## 永久链接中各部分的默认值
 
 # Directory
