--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site 网站配置
 title: ScarSu
-subtitle: 自律神仙ScarSu
+subtitle: 没有强迫症的程序猿不是好码农
 description: ScarSu's blog
-keywords: ScarSu blog 自律 自律神仙 SelfRegulation
+keywords: ScarSu blog FED code 自律 自律神仙 SelfRegulation
 author: ScarSu
 language: zh-CN
 timezone: Asia/Shanghai
