--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site 网站配置
 title: ScarSu
-subtitle: 没有强迫症的程序猿不是好码农
+subtitle: 没有强迫症的程序猿不是好砖工
 description: ScarSu's blog
 keywords: ScarSu blog FED code 自律 自律神仙 SelfRegulation
 author: ScarSu
