--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -89,12 +89,12 @@ menu:
     - page: fe_nav
       directory: fe_nav/
       icon: fa-rss-square
+    - page: Demo
+      directory: demo/
+      icon: fa-code
     - page: about
       directory: about/
       icon: fa-user
-    # - page: Demo
-    #   directory: demo/
-    #   icon: fa-code
     # - page: self_regulation
     #   directory: self_regulation/
     #   icon: fa-check-square-o
@@ -110,7 +110,7 @@ widgets:
     - tag
     # - recent_posts
     # - recent_comments
-    - links
+    # - links
 
 # relative links 友情链接
 links:
