--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
@@ -20,7 +21,7 @@
     "hexo-renderer-pug": "0.0.5",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
+    "hexo-server": "^0.2.2",
     "hexo-wordcount": "^6.0.1",
     "node-sass": "^4.9.3"
   }
