增加apps在线工具tab

--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -93,6 +93,8 @@ menu:
     #   icon: fa-code
     - page: about
       directory: about/
+    - page: apps
+      directory: apps/
     # - page: self_regulation
     #   directory: self_regulation/
     #   icon: fa-check-square-o
