--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ category_map: ## 分类别名(路由)
     10 DataBase: database
     11 Tools: tools
     12 MachineLearning: ml
+    13 外语: lang
 tag_map: ## 标签别名
 
 # Date / Time format 日期时间格式
