--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: ScarSu
 subtitle: 不要标榜，去行动😃
 description: ScarSu's blog
-keywords: ScarSu blog FED code 自律 SelfRegulation
+keywords: ScarSu blog FED code 自律 SelfRegulation FrontEnd Development
 author: ScarSu
 language: zh-CN
 timezone: Asia/Shanghai
@@ -65,12 +65,12 @@ category_map: ## 分类别名(路由)
     05 课外输入: read
     06 构建工具: build-tools
     07 工具库: utility-libraries
-    08 调试: debug
-    10 DataBase: database
-    11 Tools: tools
-    12 MachineLearning: ml
+    08 调试-Devtools进阶系列: debug
+    10 数据库: database
+    11 工具: tools
+    12 机器学习入门系列: ml
     13 外语: lang
-    14 学习方法: learn
+    14 一些高效的学习方法: learn
 tag_map: ## 标签别名
 
 # Date / Time format 日期时间格式
