--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site 网站配置
 title: ScarSu
-subtitle: 不要标榜，去行动😃
+subtitle: 不要标榜，去行动😃 | 前端 & 自律
 description: ScarSu's blog
 keywords: ScarSu blog FED code 自律 SelfRegulation FrontEnd Development
 author: ScarSu
