作为前端技术人，体验鸿蒙OS前端开发

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://www.scarsu.com/
-root: /blog
+root: '/'
 permalink: :title/ ## 文章的 永久链接 格式
 permalink_defaults: ## 永久链接中各部分的默认值
 
