--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,10 @@ skip_render:
 new_post_name: :title.md ## File name of new posts
 default_layout: post ## 预设布局
 titlecase: false ## Transform title into titlecase
-external_link: true ## Open external links in new tab
+external_link: 
+  enable: true
+  filed: site
+  exclude: []
 filename_case: 0 ## 把文件名称转换为 (1) 小写或 (2) 大写
 render_drafts: false ## 显示草稿
 post_asset_folder: true ## 启动 Asset 文件夹
