--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.2.0"
   },
   "dependencies": {
     "gitment": "0.0.3",
-    "hexo": "^3.2.0",
-    "hexo-deployer-git": "^0.3.1",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^2.2.0",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-search": "^2.2.5",
-    "hexo-generator-tag": "^0.2.0",
+    "hexo": "^5.2.0",
+    "hexo-deployer-git": "^2.1.0",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^3.0.0",
+    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.1",
+    "hexo-generator-tag": "^1.0.0",
     "hexo-helper-qrcode": "^1.0.2",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-pug": "0.0.5",
-    "hexo-renderer-sass": "^0.3.2",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.2",
+    "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-marked": "^3.3.0",
+    "hexo-renderer-pug": "^1.0.0",
+    "hexo-renderer-sass": "^0.4.0",
+    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-server": "^2.0.0",
     "hexo-wordcount": "^6.0.1",
-    "node-sass": "^4.9.3"
+    "node-sass": "^5.0.0"
   }
 }
