--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo clean ; hexo g",
+    "server": "hexo s",
+    "dev": "hexo g --watch"
+  },
   "hexo": {
     "version": "5.2.0"
   },
