--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ default_category: ScarSu
 category_map: ## 分类别名(路由)
     01关于: ScarSu
     02阅读 | 我的课外书笔记: read
-    03方法论 | 高效学习: learn
+    03成长 | 自我管理: learn
     04工具 | 效率MAX: tools
     05外语: lang
     10技术 | 前端Debug老司机: debug
