--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ default_category: ScarSu
 category_map: ## 分类别名(路由)
     00月刊: monthly
     01关于: ScarSu
-    02阅读 | 我的课外书笔记: read
+    02阅读 | 读书笔记: read
     03成长 | 自我管理: learn
     05外语: lang
     10技术 | 前端Debug老司机: debug
