--- a/_config.yml
+++ b/_config.yml
@@ -66,19 +66,13 @@ category_map: ## 分类别名(路由)
     00月刊: monthly
     01关于: ScarSu
     02阅读 | 读书笔记: read
-    03成长 | 自我管理: learn
+    03成长 | 认知&自我管理: learn
+    04效率工具: production
     05外语: lang
     10技术 | 前端Debug老司机: debug
     10技术 | 前端机器学习: ml
-    10技术 | HTML: html
-    10技术 | CSS: css
-    10技术 | JavaScript: javascript
-    10技术 | 前端性能: fe-perf
-    10技术 | 前端工具与工程化: fe-tools
-    10技术 | 前端测试: fe-test
-    10技术 | 数据库: database
+    10技术 | 前端: fe
     10技术 | 行业信息: tech-news
-    99WIP | 努力填坑ing: wip
 tag_map: ## 标签别名
 
 # Date / Time format 日期时间格式
